# clearcast

./: .gitignore  CHANGELOG.md  DOCUMENTACION_TECNICA.md  GUIA_DESARROLLO.md  GUIA_DE_USUARIO.md
.github/workflows/: rust-ci.yml
clearcast-core/: .gitignore  Cargo.toml  README.md  benchmark_summary.md  build.rs  build.sh  package.json  run_benchmarks.sh  tsconfig.json
clearcast-core/.cargo/: config.toml
clearcast-core/benches/: benchmark.rs
clearcast-core/examples/: README.md
clearcast-core/examples/browser/: index.html
clearcast-core/examples/node/: README.md  index.js  package.json
clearcast-core/scripts/: build-wasm.js
clearcast-core/src/: index.ts  lib.rs  processor.rs
clearcast-core/src/effects/: delay.rs  mod.rs  normalize.rs  soft_limiter.rs
clearcast-core/src/engine/: mod.rs
clearcast-core/src/filters/: compressor.rs  equalizer.rs  mod.rs  multiband.rs  wiener_filter.rs
clearcast-core/src/utils/: mod.rs
clearcast-core/tests/: equalizer_tests.rs  wiener_filter_tests.rs
clearcast-web-demo/: index.html  package.json
clearcast-web-demo/css/: styles.css
clearcast-web-demo/js/: app.js
clearcast-web-demo/pkg/: clearcast_core.d.ts  clearcast_core.js  clearcast_core_bg.wasm  clearcast_core_bg.wasm.d.ts
