[package]
name = "clearcast-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core audio processing library for ClearCast"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/clearcast"
keywords = ["audio", "noise-reduction", "wasm"]
categories = ["wasm"]
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Native target (non-WASM)
native = ["rustfft", "realfft"]

# Enable standard library
std = []

# WASM target
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "getrandom/js",
    "console_error_panic_hook"
]

# Enable console logging in wasm
console = ["console_log"]

# Enable benchmarking
bench = []

# Default features
default = []

[dependencies]
# WebAssembly dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

# Audio processing
rustfft = { version = "6.2", optional = true }
realfft = { version = "3.4.0", optional = true }
biquad = "0.5.0"
num-complex = { version = "0.4" }
num-traits = "0.2"

# Data structures and utilities
ndarray = { version = "0.15", features = ["approx"] }
rayon = { version = "1.8" }

# Error handling
thiserror = "1.0"

# Logging
log = { version = "0.4", features = ["std"] }

# Random number generation
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
approx = "0.5"
ndarray-stats = "0.5"
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
wasm-bindgen-test = { version = "0.3" }
float-cmp = "0.9.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# WebAssembly specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[[bench]]
name = "benchmark"
harness = false

[profile.release]
# Optimize for size
opt-level = 's'  # Optimize for size
lto = false  # LTO no es compatible con wasm32-unknown-unknown
codegen-units = 1
